# original_from_gh_and_prev-team

copernicus_ws_farm/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
copernicus_ws_farm/devel/include/copernicus_msgs/: BMS.h  Diagnostics.h  RPM.h  SonarSensor.h  Velocities.h
copernicus_ws_farm/devel/include/diff_drive_controller/: Acceleration.h  AccelerationRequest.h  AccelerationResponse.h  Velocity.h  VelocityRequest.h  VelocityResponse.h
copernicus_ws_farm/devel/include/farm_node/: farm_node.h  farm_nodeRequest.h  farm_nodeResponse.h
copernicus_ws_farm/devel/lib/copernicus_hardware/: copernicus_base  copernicus_hardware_node  serial_node
copernicus_ws_farm/devel/lib/copernicus_teleoperator/: copernicus_joy_teleop_node
copernicus_ws_farm/devel/lib/diff_drive_controller/: diffbot  skidsteerbot
copernicus_ws_farm/devel/lib/farm_node/: farm_node
copernicus_ws_farm/devel/lib/pkgconfig/: copernicus_base.pc  copernicus_control.pc  copernicus_description.pc  farm_node.pc  (+9 more)
copernicus_ws_farm/src/copernicus/: README.md  autostart.sh
copernicus_ws_farm/src/copernicus_hardware/: CMakeLists.txt  package.xml
copernicus_ws_farm/src/farm_node/: CMakeLists.txt  package.xml
copernicus_ws_farm/src/farm_node/scripts/: change_run.py  motion.txt  old_motion.txt
copernicus_ws_farm/src/farm_node/src/: run.cpp
copernicus_ws_farm/src/farm_node/srv/: farm_node.srv
copernicus_ws_farm/src/leimou/: CMakeLists.txt
copernicus_ws_farm/src/ploughservo/: CMakeLists.txt  package.xml
copernicus_ws_farm/src/wit_imu_driver/: CMakeLists.txt  README.md
(+116 files in other folders)
