<?xml version="1.0"?>
<package>
  <name>farm_node</name>
  <version>1.0.0</version>
  <description>The farm_node package</description>

  <author email="venk0023@e.ntu.edu.sg">Venkat</author>

  <maintainer email="venk0023@e.ntu.edu.sg">Venkat</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
